--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation "com.andkulikov:transitionseverywhere:1.8.0"
+    implementation 'com.google.code.gson:gson:2.8.2'
 
 }
