--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,12 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -36,5 +42,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation "com.andkulikov:transitionseverywhere:1.8.0"
     implementation 'com.google.code.gson:gson:2.8.2'
+
+    implementation(name:'HERE-sdk', ext:'aar')
+    implementation 'org.locationtech.jts:jts-core:1.15.0'
 
 }
