--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,14 @@ android {
         }
     }
 }
-
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation(name:'HERE-sdk', ext:'aar')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:27.1.1'
@@ -37,4 +42,5 @@ dependencies {
     implementation "com.andkulikov:transitionseverywhere:1.8.0"
     implementation 'com.google.code.gson:gson:2.8.2'
 
+    implementation 'org.locationtech.jts:jts-core:1.15.0'
 }
