--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.trafficanalysics">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
     <application
         android:name=".LocationApplication"
         android:allowBackup="true"
@@ -18,6 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".search.ResultListActivity" />
+
+        <meta-data android:name="com.here.android.maps.appid" android:value="thX2pDrRMPjyHM11mLFa"/>
+        <meta-data android:name="com.here.android.maps.apptoken" android:value="wQ0HJTFIx4GuTlLuqVkAGw"/>
     </application>
 
 </manifest>
