--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'org.locationtech.jts:jts-core:1.15.0'
+    implementation 'cn.pedant.sweetalert:library:1.3'
+
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
 }
